// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelHide: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title class="sr-only" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  labelOnTop: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--select">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  placeholder: 'placeholder'
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="placeholder">
            <option value="">
              placeholder
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  placeholder: 'placeholder',
  placeholderDisabled: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="placeholder">
            <option value="">
              placeholder
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  placeholder: 'placeholder',
  placeholderDisabled: true,
  value: 'ble'
}: 1`] = `
<mg-input-select value="ble">
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="placeholder">
            <option value="">
              placeholder
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  placeholder: 'placeholder',
  placeholderHide: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="placeholder">
            <option value="">
              placeholder
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--readonly mg-input--select">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args {
  label: 'label',
  identifier: 'identifier',
  items: [Array],
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--select">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
        <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
          <mg-icon icon="info-circle"></mg-icon>
        </mg-tooltip>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 2`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              blu
            </option>
            <option value="1">
              bli
            </option>
            <option value="2">
              blo
            </option>
            <option value="3">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should render with args { label: 'label', identifier: 'identifier', items: [Array] }: 3`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <optgroup label="blu">
              <option value="0">
                blu
              </option>
              <option value="1">
                bli
              </option>
            </optgroup>
            <optgroup label="blo">
              <option value="0">
                blo
              </option>
            </optgroup>
            <option value="2">
              bla
            </option>
          </select>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should trigger events for items ({ items: [Array], selectedIndex: 0 }) with selectedIndex (%s) 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-help-text" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              batman
            </option>
            <option value="1">
              robin
            </option>
          </select>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should trigger events for items ({ items: [Array], selectedIndex: 1 }) with selectedIndex (%s) 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-help-text" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              batman
            </option>
            <option value="1">
              robin
            </option>
            <option value="2">
              joker
            </option>
            <option value="3">
              bane
            </option>
          </select>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should trigger events for items ({ items: [Array], selectedIndex: 1 }) with selectedIndex (%s) 2`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-help-text" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              batman
            </option>
            <option value="1">
              robin
            </option>
          </select>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should trigger events for items ({ items: [Array], selectedIndex: 2 }) with selectedIndex (%s) 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-help-text" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              batman
            </option>
            <option value="1">
              robin
            </option>
            <option value="2">
              joker
            </option>
            <option value="3">
              bane
            </option>
          </select>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select Should trigger events for items ({ items: [Array], selectedIndex: 3 }) with selectedIndex (%s) 1`] = `
<mg-input-select>
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-help-text" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="0">
              batman
            </option>
            <option value="1">
              robin
            </option>
            <option value="2">
              joker
            </option>
            <option value="3">
              bane
            </option>
          </select>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-select patternerrormessage="Non">
  <mock:shadow-root>
    <div class="is-not-valid mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-error" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="blu">
              blu
            </option>
            <option value="bli">
              bli
            </option>
            <option value="blo">
              blo
            </option>
            <option value="bla">
              bla
            </option>
          </select>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-select patternerrormessage="Non">
  <mock:shadow-root>
    <div class="mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-error" class="mg-input__box" disabled="" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="blu">
              blu
            </option>
            <option value="bli">
              bli
            </option>
            <option value="blo">
              blo
            </option>
            <option value="bla">
              bla
            </option>
          </select>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-select patternerrormessage="Non">
  <mock:shadow-root>
    <div class="is-not-valid mg-input mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <select aria-describedby="identifier-error" class="mg-input__box" id="identifier" name="identifier" title="Veuillez sélectionner une valeur">
            <option value="">
              Veuillez sélectionner une valeur
            </option>
            <option value="blu">
              blu
            </option>
            <option value="bli">
              bli
            </option>
            <option value="blo">
              blo
            </option>
            <option value="bla">
              bla
            </option>
          </select>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;

exports[`mg-input-select validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-select patternerrormessage="Non">
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--select">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-select>
`;
